<resources>
    <string name="app_name">Mobina Explorer</string>

    <!-- Explorer -->
    <string name="notif_channel">Explorer</string>
    <string name="notif_channel_desc">Explores for Mobina</string>
    <string name="notif_title">Exploring for Mobina&#8230;</string>
    <string name="notif_stop">Stop</string>

    <!-- Panel -->
    <string name="canSumNrm">%d candidates</string>
    <string name="canSumRej">%d rejected</string>
    <string name="canSumObc">%d obscure</string>
    <string name="smStart">Start</string>
    <string name="smStop">Stop</string>
    <string name="smStrategy">Strategy</string>
    <string name="smAnalyse">Analyse</string>
    <string name="smCollect">Collect</string>
    <string name="smSearch">Search</string>
    <string name="smOnlyPv">Only Inaccessible</string>
    <string name="noRemPv">No remaining inaccessible profiles!</string>
    <string name="smSummary">Summary</string>
    <string name="summary">The database has %1\$s nominees.\n%2\$s percent have been analyzed.\n%3\$s percent have been followed.</string>
    <string name="export">Export</string>
    <string name="exportDone">Done!</string>
    <string name="exportUndone">Failed!</string>
    <string name="smList">List</string>
    <string name="smListCan">Candidates</string>
    <string name="smListRej">Rejected</string>
    <string name="smListObc">Obscure</string>
    <string name="smSort">Sort</string>
    <string name="smSortByScore">Sort By Score</string>
    <string name="smSortByDate">Sort By Date</string>
    <string name="smSortByUser">Sort By User</string>

    <!-- ListUser -->
    <string name="cmInstagram">View in Instagram</string>
    <string name="cmInstaTools">View in InstaTools</string>
    <string name="cmObscure">Mark as Obscure</string>
    <string name="cmRepair">Request Reparation</string>

    <!-- #GLOBAL -->
    <string-array name="bytes">
        <item>B</item>
        <item>KB</item>
        <item>MG</item>
        <item>GB</item>
    </string-array>
</resources>