<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/smStart"
        android:title="@string/smStart" />

    <item
        android:id="@+id/smSummary"
        android:title="@string/smSummary" />

    <item
        android:id="@+id/smStrategy"
        android:title="@string/smStrategy">

        <menu>
            <item
                android:id="@+id/smStrAnalyse"
                android:checkable="true"
                android:checked="true"
                android:title="@string/smAnalyse" />
            <item
                android:id="@+id/smStrCollect"
                android:checkable="true"
                android:title="@string/smCollect" />
            <item
                android:id="@+id/smStrSearch"
                android:checkable="true"
                android:title="@string/smSearch" />
        </menu>
    </item>

    <item
        android:id="@+id/smList"
        android:title="@string/smList">

        <menu>
            <item
                android:id="@+id/smListCan"
                android:checkable="true"
                android:checked="true"
                android:title="@string/smListCan" />
            <item
                android:id="@+id/smListRej"
                android:checkable="true"
                android:title="@string/smListRej" />
            <item
                android:id="@+id/smListObc"
                android:checkable="true"
                android:title="@string/smListObc" />
        </menu>
    </item>

    <item
        android:id="@+id/smSort"
        android:title="@string/smSort">

        <menu>
            <item
                android:id="@+id/smSortByScore"
                android:checkable="true"
                android:checked="true"
                android:title="@string/smSortByScore" />
            <item
                android:id="@+id/smSortByDate"
                android:checkable="true"
                android:checked="true"
                android:title="@string/smSortByDate" />
            <item
                android:id="@+id/smSortByUser"
                android:checkable="true"
                android:title="@string/smSortByUser" />
        </menu>
    </item>

    <item
        android:id="@+id/smOnlyPv"
        android:checkable="true"
        android:checked="false"
        android:title="@string/smOnlyPv"
        android:visible="false" />
</menu>